[package]
name = "videotex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.16.1", features = ["webgpu"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlVideoElement",
    "HtmlMediaElement",
    "Window",
    "Document",
] }
wgpu-types = "24.0.0"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
